src/styles/1-base/2-general.css
/* Variables */

:root {
   --blue: #58A5FF;
   --white: #FFF;
   --black: #000;
   --grey: #C4C4C4;
   --red: #FF1715;

}

/* Styles */

* {
   font-family: 'Roboto', sans-serif;
}

body {
   background-color: var(--blue);
}

.wrapper {
   width: 75%;
   margin: auto;
}

.hidden {
   display: none;
}

.flex {
   display: flex;
}

.flex-jc-sb {
   justify-content: space-between;
}

.flex-jc-c {
   justify-content: center;
}

.flex-ai-c {
   align-items: center;
}

li {
   list-style: none;
}

a {
   text-decoration: none;
}

/* Header */

header {
   background-color: var(--white);
}

.navigation {
   height: 10vh;
}

.logo__link {
   background-image: url(/public/images/Logo.svg);
   background-size: 100% 100%;
   display: block;
   height: 4rem;
   overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
   width: 4rem;
   position: fixed;
   top: 0;
   left: auto;
}

.nav__toggle {
   position: fixed;
   top: 0;
   right: 12.5%;
   width: 4rem;
   height: 4rem;
}

.nav__content {
   padding-top: 7rem;
}

.nav__item {
   text-align: center;
   padding: 2rem 0;
}

.nav__link {
   color: var(--black);
   font-size: 2.5rem;
   font-weight: 600;
}

.nav__link:focus {
   color: var(--blue);
}

.nav__link:hover {
   color: var(--blue);
}

/* Main */

main {
   background-color: var(--white);
}

h1 {
   text-align: center;
   font-size: 3.5rem;
   font-weight: 700;
   padding: 3rem 0;
}

p {
   text-align: center;
}


/* Footer */

footer {
   height: 15vh;
   background-color: var(--white);
   padding-top: 5rem;
}

.socials__item {
   margin: auto;
}

.socials__image {
   width: 2rem;
}

footer p {
   padding-top: 1rem;
   font-size: 1.2rem;
}

/* Media queries */

@media (min-width: 28em) /* 448px */ {
   h1 {
      font-size: 4rem;
   }

   p {
      font-size: 1.7rem;
   }

   .socials__image {
      width: 2.5rem;
   }

   footer p {
      font-size: 1.5rem;
   }
}

